src/style.css
/* ... */
@property --deg {
  syntax: "<angle>";
  initial-value: 0deg;
  inherits: true;
}

.project-card::before,
.project-card::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background: conic-gradient(
    from var(--deg) at center,
    #00c3ff,
    #4d0199,
    #6300c3,
    #00c3ff
  );
  border-radius: inherit;
  z-index: -2;
  padding: 1px;
  animation: rotate 5s linear infinite;
}

.project-card::after {
  filter: blur(1.5px);
  transition: filter 0.3s ease, animation-duration 0.3s ease;
}

@keyframes rotate {
  to {
    --deg: 360deg;
  }
}

.project-card:hover::before,
.project-card:hover::after {
  /* transform: translateY(-10px); */
  /* box-shadow: 0 10px 30px rgba(138, 35, 135, 0.2), 0 15px 12px rgba(233, 64, 87, 0.1); */
  animation-duration: 2s;
  filter: blur(3px);
  transition: filter 0.3s ease, animation-duration 0.3s ease;
}

.project-image {
  width: 100%;
  height: 240px;
  overflow: hidden;
}

.project-image img {
  display: flex;
  width: auto;
  height: fit-content;
  transition: transform 0.5s ease;
  align-items: center;
  margin: 0 auto;
}

.project-card:hover .project-image img {
  transform: scale(1.05);
}

.project-content {
  padding: 1.5rem;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.project-title {
  font-size: 1.5rem;
  margin-bottom: 1rem;
  font-weight: 700;
}

.project-description {
  color: var(--link-hover-color);
  margin-bottom: 1.5rem;
  line-height: 1.6;
  flex: 1;
}

.project-tech {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  margin-bottom: 1.5rem;
}

.tech-tag {
  background-color: rgba(255, 255, 255, 0.1);
  padding: 0.4rem 0.8rem;
  border-radius: 50px;
  font-size: 0.85rem;
  font-weight: 500;
  transition: background-color 0.3s ease;
}

.tech-tag:hover {
  background-color: rgba(255, 255, 255, 0.2);
}

.project-links {
  display: flex;
  gap: 1.5rem;
}

.project-link {
  position: relative;
  font-weight: 600;
  transition: color 0.3s ease;
  display: inline-flex;
  align-items: center;
}

.project-link .arrow {
  margin-left: 0.3rem;
  transition: transform 0.3s ease;
}

.project-link:hover {
  color: #5461bc; /* Pink/red from your gradient */
}

.project-link:hover .arrow {
  transform: translateX(4px);
}

.projects-section-footer {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-top: 4rem;
  font-size: calc(2.5rem + 1vw);
  font-style: oblique;
  font-weight: lighter;
  position: relative;
  overflow: hidden;

  opacity: 0;
  transition: opacity 4s ease-out;
}

.animate-in {
  opacity: 1 !important;
}

#varchitect {
  height: 200px;
  width: auto;
  align-items: center;
  display: flex;
  margin-top: 2rem;
}

#ai-code-reviewer-svg {
  height: 200px;
  width: auto;
  align-items: center;
  display: flex;
  margin-top: 2rem;
}

/* Media query for larger screens */
@media (max-width: 768px) {
  .projects-container {
    grid-template-columns: 1fr;
  }
}

@media (min-width: 1024px) {
  .projects-section {
    padding: 8rem 2rem;
  }
}

@keyframes slide_in {
  from {
    transform: translateX(-100%);
    opacity: 0;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

/* Contact Section Styling */
.contact-section {
  padding: 8rem 2rem 6rem;
  background: linear-gradient(
    to top,
    rgba(40, 40, 55, 0.95) 0%,
    rgba(20, 20, 30, 0.95) 50%,
    rgba(12, 12, 12, 0.95) 90%
  );
  position: relative;
}

.contact-container {
  max-width: 1200px;
  margin: 0 auto;
}

.contact-content {
  height: fit-content;
  display: flex;
  flex-direction: row;
  gap: 30px;
}

.contact-text-and-socials {
  min-height: 100%;
  display: flex;
  flex-direction: column;
  flex: 1;
}

@media (max-width: 768px) {
  .contact-container {
    margin: 0 2rem;
  }

  .contact-content {
    flex-direction: column;
  }

  .contact-text-and-socials {
    flex: none;
  }
}
/* Socials styling */
.socials {
  display: flex;
  flex: 1;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-end;
  gap: 1rem;
  min-height: max-content;
}

.socials a {
  display: flex;
  align-items: center;
  justify-content: baseline;
}

.socials img {
  height: 50px;
  width: 50px;
  margin-right: 10px;
}

#linkedin-svg {
  scale: 1.2;
}

.social-name {
  font-size: 1.3rem;
  position: relative;
  display: inline-block;
  transition: color 0.3s ease;
}

.social-name::after {
  content: "";
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: currentColor;
  transform-origin: bottom right;
  transition: transform 0.3s ease-out;
}

.social-name:hover::after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

@media (max-width: 768px) {
  .socials {
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 1.5rem;
  }

  .socials img {
    height: 40px;
    width: 40px;
  }
}

@media (max-width: 426px) {
  .socials {
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 0.5rem;
  }

  .socials img {
    height: 40px;
    width: 40px;
  }

  .social-name {
    display: none;
  }
}

.contact-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  top: 6rem; /* Adjust based on your navbar height + some padding */
  align-self: start;
  height: fit-content;
}

.contact-info h3 {
  font-size: 2rem;
  margin-bottom: 1rem;
  background: linear-gradient(
    45deg,
    var(--primary-accent-color),
    var(--secondary-accent-color)
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}

.contact-info p {
  font-size: 1.1rem;
  line-height: 1.8;
  margin-bottom: 0; /* Removed margin since there are no contact items below */
  color: #cccccc;
}
/* ... */

